--- a/chart/templates/mo-init-job.yaml
+++ b/chart/templates/mo-init-job.yaml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: Magenta ApS
 #
 # SPDX-License-Identifier: MPL-2.0
----
+{{- if .Values.os2mo.init.enabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -76,3 +76,4 @@ spec:
             items:
               - key: config
                 path: config.yml
+{{- end }}
