--- a/chart/templates/mo-service.yaml
+++ b/chart/templates/mo-service.yaml
@@ -15,7 +15,7 @@ spec:
     app: mo
 
   # TODO: remove later - necessary for now due to https://redmine.magenta-aps.dk/issues/47372
-  sessionAffinity: ClientIP
+  #sessionAffinity: ClientIP
 
   ports:
     - name: "5000"
