Added kubeval validation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,9 @@ include:
         echo "deb https://baltocdn.com/helm/stable/debian/ all main" |
         tee /etc/apt/sources.list.d/helm-stable-debian.list
     - apt-get update && apt-get install -y helm
+    - wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
+    - tar xf kubeval-linux-amd64.tar.gz
+    - sudo cp kubeval /usr/local/bin
 
 .lint-template: &lint
   <<: *install-deps
@@ -88,7 +91,8 @@ Lint Chart:
 Generate Project:
   <<: *test
   script:
-    - helm template --kube-version 1.19.11 chart/
+    - helm template --kube-version 1.19.11 chart
+    - helm template --kube-version 1.19.11 chart | kubeval --schema-location https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master -
 
 
 Release version:
