--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -230,3 +230,23 @@ nameOverride: ""
 fullnameOverride: ""
 
 fixture: null
+
+orgviewer:
+  image:
+    repository: magentaaps/os2orgviewer
+    tag: "1.0.1"
+    pullPolicy: Always
+
+  med:
+    enabled: false
+    hostname: null
+    url: null
+    org_uuid: null
+    title: null
+
+  adm:
+    enabled: false
+    hostname: null
+    url: null
+    org_uuid: null
+    title: null
