--- a/chart/templates/sdtool-deployment.yaml
+++ b/chart/templates/sdtool-deployment.yaml
@@ -61,8 +61,8 @@ spec:
                   name: {{ .Values.sdtool.sd_secret_name }}
                   key: sd_institution
 
-#            - name: SD_TOO_DEEP
-#              value: "{{ .Values.sdtool.sd_too_deep }}"
+            - name: SD_TOO_DEEP
+              value: {{ .Values.sdtool.sd_too_deep | qoute }}
           envFrom:
             - configMapRef:
                 name: sdtool-json-config
