--- a/chart/templates/sd-changed-at-deployment.yaml
+++ b/chart/templates/sd-changed-at-deployment.yaml
@@ -116,10 +116,8 @@ spec:
           imagePullPolicy: {{ .Values.keycloak.integrationbuilder.image.pullPolicy }}
           env:
             # Postgres state connection
-            {{- $use_ssl := (ne .Values.database.sslmode "") }}
-            {{- $sslmode := ternary "require" "disable" $use_ssl }}
             - name: POSTGRES_CONNECTION_STRING
-              value: "postgres://keycloak:$(KEYCLOAK_DB_PASSWORD)@{{ .Values.database.host }}/keycloak?sslmode={{ $sslmode }}"
+              value: {{ include "keycloak_db_connection_string" . }}
             - name: POSTGRES_SCHEMA_NAME
               value: terraform_remote_state_sd_changed_at
 
