--- a/chart/templates/sdtool-deployment.yaml
+++ b/chart/templates/sdtool-deployment.yaml
@@ -79,11 +79,9 @@ spec:
           image: "{{ .Values.keycloak.integrationbuilder.image.repository }}:{{ .Values.keycloak.integrationbuilder.image.tag }}"
           imagePullPolicy: {{ .Values.keycloak.integrationbuilder.image.pullPolicy }}
           env:
-            {{- $use_ssl := (ne .Values.database.sslmode "") }}
-            {{- $sslmode := ternary "require" "disable" $use_ssl }}
             # Postgres state connection
             - name: POSTGRES_CONNECTION_STRING
-              value: "postgres://keycloak:$(KEYCLOAK_DB_PASSWORD)@{{ .Values.database.host }}/keycloak?sslmode={{ $sslmode }}"
+              value: {{ include "keycloak_db_connection_string" . }}
             - name: POSTGRES_SCHEMA_NAME
               value: terraform_remote_state_sdtool
 
