--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -275,6 +275,7 @@ sdtool:
     pullPolicy: Always
   sd_secret_name: sd-secret
   sd_too_deep: '[]'
+  environment: {}
   resources:
     requests:
       memory: "512Mi"
