--- a/chart/templates/sdtool-configmap.yaml
+++ b/chart/templates/sdtool-configmap.yaml
@@ -2,6 +2,7 @@
 #
 # SPDX-License-Identifier: MPL-2.0
 ---
+{{- if .Values.sdtool.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,3 +13,4 @@ metadata:
   {{- end }}
 data:
 {{ toYaml .Values.sdtool.environment | indent 2 }}
+{{- end }}
