--- a/os2mo/templates/integrations/ad_to_mo_sync/deployment.yaml
+++ b/os2mo/templates/integrations/ad_to_mo_sync/deployment.yaml
@@ -30,25 +30,25 @@ spec:
           image: "{{ .Values.ad_to_mo_sync.image.registry }}/{{ .Values.ad_to_mo_sync.image.repository }}:{{ .Values.ad_to_mo_sync.image.tag }}"
           imagePullPolicy: {{ .Values.ad_to_mo_sync.image.pullPolicy }}
           env:
-            {{- if .Values.adguid_sync.amqp_scheme }}
+            {{- if .Values.ad_to_mo_sync.amqp_scheme }}
             - name: AMQP_SCHEME
-              value: "{{ .Values.adguid_sync.amqp_scheme }}"
+              value: "{{ .Values.ad_to_mo_sync.amqp_scheme }}"
             {{- end }}
             - name: AMQP_HOST
-              value: "{{ .Values.adguid_sync.amqp_host }}"
+              value: "{{ .Values.ad_to_mo_sync.amqp_host }}"
             - name: AMQP_USER
-              value: "{{ .Values.adguid_sync.amqp_user }}"
+              value: "{{ .Values.ad_to_mo_sync.amqp_user }}"
             - name: AMQP_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: adguid-sync-secret
                   key: amqp_password
-            {{- if .Values.adguid_sync.amqp_port }}
+            {{- if .Values.ad_to_mo_sync.amqp_port }}
             - name: AMQP_PORT
-              value: "{{ .Values.adguid_sync.amqp_port }}"
+              value: "{{ .Values.ad_to_mo_sync.amqp_port }}"
             {{- end }}
             - name: AMQP_VHOST
-              value: "{{ .Values.adguid_sync.amqp_vhost }}"
+              value: "{{ .Values.ad_to_mo_sync.amqp_vhost }}"
             - name: MO_URL
               value: "http://mo-service:5000"
             - name: AUTH_SERVER
