--- a/os2mo/templates/mo/ingress.yaml
+++ b/os2mo/templates/mo/ingress.yaml
@@ -42,6 +42,13 @@ spec:
                 name: keycloak-service
                 port:
                   number: 8080
+          - path: /new
+            pathType: Prefix
+            backend:
+              service:
+                name: mo-naldo-service
+                port:
+                  number: 3000
           {{- if not .Values.os2mo.headless }}
           - path: /
             pathType: Prefix
