--- a/os2mo/templates/integrations/ad_to_mo_sync/deployment.yaml
+++ b/os2mo/templates/integrations/ad_to_mo_sync/deployment.yaml
@@ -30,9 +30,9 @@ spec:
           image: "{{ .Values.ad_to_mo_sync.image.registry }}/{{ .Values.ad_to_mo_sync.image.repository }}:{{ .Values.ad_to_mo_sync.image.tag }}"
           imagePullPolicy: {{ .Values.ad_to_mo_sync.image.pullPolicy }}
           env:
-            {{- if .Values.ad_to_mo_sync.amqp_scheme }}
+            {{- if .Values.amqp.amqp_scheme }}
             - name: AMQP_SCHEME
-              value: "{{ .Values.ad_to_mo_sync.amqp_scheme }}"
+              value: "{{ .Values.amqp.amqp_scheme }}"
             {{- end }}
             - name: AMQP_HOST
               value: "{{ .Values.ad_to_mo_sync.amqp_host }}"
@@ -43,9 +43,9 @@ spec:
                 secretKeyRef:
                   name: adguid-sync-secret
                   key: amqp_password
-            {{- if .Values.ad_to_mo_sync.amqp_port }}
+            {{- if .Values.amqp.amqp_port }}
             - name: AMQP_PORT
-              value: "{{ .Values.ad_to_mo_sync.amqp_port }}"
+              value: "{{ .Values.amqp.amqp_port }}"
             {{- end }}
             - name: AMQP_VHOST
               value: "{{ .Values.ad_to_mo_sync.amqp_vhost }}"
