--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ variables:
   REVIEW_CHART_URL: $HELM_REPO/api/charts/os2mo/$REVIEW_VERSION
   REVIEW_URL: https://review-chart-mr$CI_MERGE_REQUEST_IID.moraci.magentahosted.dk
   RELEASE_REGISTRY: index.docker.io
-  RELEASE_REGISTRY_IMAGE: ${RELEASE_REGISTRY}/magentaaps/os2mo-helm-chart
+  RELEASE_REGISTRY_NAMESPACE: ${RELEASE_REGISTRY}/magentaaps
 
 cache:
   key: "${CI_JOB_NAME}"
@@ -109,7 +109,7 @@ Release build OCI:
     - helm registry login --username ${CI_REGISTRY_USER} --password ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
   script:
     - helm package --version=0.0.0-${CI_COMMIT_SHA} os2mo
-    - helm push os2mo-0.0.0-${CI_COMMIT_SHA}.tgz oci://$CI_REGISTRY_IMAGE
+    - helm push os2mo-0.0.0-${CI_COMMIT_SHA}.tgz oci://$CI_REGISTRY_NAMESPACE
 
 
 Release review OCI:
