Use MYSQL_RANDOM_ROOT_PASSWORD instead of MYSQL_ROOT_PASSWORD

--- a/os2mo/templates/integrations/os2sync/mysql-deployment.yaml
+++ b/os2mo/templates/integrations/os2sync/mysql-deployment.yaml
@@ -28,11 +28,8 @@ spec:
         - name: os2sync-mysql
           image: "mysql:{{ .Values.os2sync.mysql_version }}"
           env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: os2sync-secret
-                  key: db_root_password
+            - name: MYSQL_RANDOM_ROOT_PASSWORD
+              value: "yes"
             - name: MYSQL_USER
               value: os2sync_admin
             - name: MYSQL_PASSWORD
